# frapars

./: .gitignore  README.md  banner.txt  pyproject.toml  pytest.ini  requirement.txt  setup.py
frapars/: __init__.py  __main__.py
frapars/constants/: insee.py  municipalities.py  postcodes.py  regex.py  words.py
frapars/data/: insee_file.csv
frapars/functions/: addresses.py
frapars/res/: insee_file.csv  parsed_addresses.csv
tests/: test_script.py
tests/functions/: test_addresses.py  test_formatter.py
